fix: 불필요한 속성 삭제(overflow-x)

--- a/week1/assign/css/style.css
+++ b/week1/assign/css/style.css
@@ -154,7 +154,6 @@ ul.banner_list {
   gap: 0.5rem;
 
   overflow-x: scroll;
-  overflow-y: none;
 
   scroll-behavior: smooth;
 }
